# blog_dg

./: .gitignore  Makefile  README.md  pyproject.toml  test_functional.py  test_settings.py
blog/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_slug.py  0003_post_slug_populate.py  0004_alter_post_slug.py  0005_pagehitdata.py
blog/static/css/: blog.css  codestyles.css
blog/templates/blog/: base.html  pagination.html  post_detail.html  post_draft_list.html  post_edit.html  post_list.html
blog/templates/registration/: login.html
blog/templatetags/: blog_tags.py
blog/tests/: test_models.py  test_views.py
blogsite/: settings.py  urls.py
