[tool.poetry]
name = "blog_dg"
version = "0.1.0"
description = "Personal blog based on DjangoGirls tutorial"
authors = ["Gary Martin <gary.martin@physics.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/garym/blog_dg"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.3"
markdown = "^3.3.4"
django-bleach = "^0.6.1"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
pytest = "^6.2.4"
pytest-django = "^4.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
